--- a/src/app/modules/benefit/vendor-plan/vendor-plan.component.html
+++ b/src/app/modules/benefit/vendor-plan/vendor-plan.component.html
@@ -15,42 +15,47 @@
 
 
             <div class="col-sm-4" style="margin-top: 0.5rem; margin-bottom: 0.5rem;">
-                <span style="font-size: large; font-weight: bold;">Vendor</span>
+                <span style="font-size: large; font-weight: bold;">Vendor :</span>
             </div>
             <div class="col-sm-8">
-                <span style="font-size: large; font-weight: bold;">{{vend.name}}</span>
+                <span style="font-size: large; font-weight: 400; font-style: italic;">{{vend.name}}</span>
             </div>
 
             <div class="col-sm-4" style="margin-top: 0.5rem; margin-bottom: 0.5rem;">
-                <span style="font-size: large; font-weight: bold;">Description</span>
+                <span style="font-size: large; font-weight: bold;">Description:</span>
             </div>
             <div class="col-sm-8">
-                <span style="font-size: large; font-weight: bold;">{{vend.description}}</span>
+                <span style="font-size: large; font-weight: 400; font-style: italic;">{{vend.description}}</span>
             </div>
 
 
 
             <div class="col-sm-4" style="margin-top: 0.5rem; margin-bottom: 0.5rem;">
-                <span style="font-size: large; font-weight: bold;">Address</span>
+                <span style="font-size: large; font-weight: bold;">Address:</span>
             </div>
             <div class="col-sm-8">
-                <span style="font-size: large; font-weight: bold;">{{vend.address}}</span>
+                <span style="font-size: large; font-weight: 400; font-style: italic;">{{vend.address}}</span>
             </div>
 
 
             <div class="col-sm-4" style="margin-top: 0.5rem; margin-bottom: 0.5rem;">
-                <span style="font-size: large; font-weight: bold;">phoneNumber</span>
+                <span style="font-size: large; font-weight: bold;">phoneNumber:</span>
             </div>
             <div class="col-sm-8">
-                <span style="font-size: large; font-weight: bold;">{{vend.phoneNumber}}</span>
+                <span style="font-size: large; font-weight: 400; font-style: italic;">{{vend.phoneNumber}}</span>
             </div>
-            <div class="col-sm-6"style="margin-top: 1rem; margin-bottom: 1rem;" >
+            <div class="col-sm-3"style="margin-top: 1rem; margin-bottom: 1rem;" >
                 <a href="javascript:void(0)" (click)="onClick()"  [routerLink]="['/benefits/create-benefit',vend.id]">view details</a>
+                
+            </div>
+            <div class="col-sm-3" style="margin-top: 1rem; margin-bottom: 1rem;">
+                <!-- <span style="padding: 0.5rem;"><i class="fas fa-trash-alt" style="color: rgb(255, 0, 0);" (click)="deleteVendor()">Remove Vendor</i></span> -->
+                <i class="fas fa-times"  style="background-color: white; color: red;" (click)="deleteVendor()"></i>
             </div>
             <div class="col-sm-6" style="margin-top: 1rem; margin-bottom: 1rem;">
                 <!-- <span style="padding: 0.5rem;"><i class="fas fa-trash-alt" style="color: rgb(255, 0, 0);" (click)="deleteVendor()">Remove Vendor</i></span> -->
-                <button nbButton outline status="danger"  class="d-flex column"
-                style="background-color: white;"  (click)="deleteVendor()">Remove Vendor</button>
+                <!-- <button nbButton outline status="danger"  class="d-flex column"
+                style="background-color: white;"  (click)="deleteVendor()"></button> -->
             </div>
         </div>
 
@@ -96,7 +101,9 @@
 <ngx-side-modal [(show)]='showEvent' style="width: 500px;">
     <div modal-header style="font-size: larger; font-weight: bold;">
 
-        <span></span>
+        <span>
+            Create New Vendor
+        </span>
     </div>
     <div modal-body>
 
@@ -140,9 +147,9 @@
 
 
                 <div class="form-group row">
-                    <label for="inputEmail1" class="label col-sm-4 col-form-label listsubheader">Benefit
+                    <label for="inputEmail1" class="label  col-form-label listsubheader">Benefit
                         Type</label>
-                    <div class="col-sm-8">
+                    <div class="">
                          <select placeholder="Select Gender" class="form-control" name="benefitTypeId" id="benefitTypeId"
                             #benefitTypeId="ngModel" [(ngModel)]="AddVendor.benefitTypeId">
                             <option value="">--Select Event---</option>
@@ -191,7 +198,10 @@
                     <button *ngIf="!submitbtnPressed" nbButton status="primary" class="d-flex column"
                         [disabled]="!disableEvent" (click)="SubmitEvent()">Submit</button>
 
-
+                        <div style="padding-left: 15px;">
+                            <button nbButton outline status="primary" (click)="showEvent = false"
+                              class="d-flex column" style="background-color: white;">Discard</button>
+                          </div>
                 </div>
 
             </div>
@@ -202,7 +212,7 @@
 <!-- vendor for plan -->
 <ngx-side-modal [(show)]='showPlan' style="width: 500px;">
     <div modal-header style="font-size: larger; font-weight: bold;">
-        <span></span>
+        <span> Create New Plan</span>
     </div>
     <div modal-body>
 
@@ -220,23 +230,31 @@
                     </div>
 
                 </div>
-                <div class="form-group">
-                    <label for="title">Policy number</label>
-                    <input type="text" class="form-control" placeholder="Enter refNumber" id="refNumber"
-                        #refNumber="ngModel" name="refNumber" [(ngModel)]=" AddVendorPlan.refNumber" required>
 
-                    <div *ngIf="refNumber.invalid && (refNumber.dirty || refNumber.touched)" class="error">
-                        <div *ngIf="refNumber.errors.required">refNumber is required</div>
+
+                
+                <div class="form-group ">
+                    <label for="inputEmail1" class="label  col-form-label listsubheader">Benefit
+                        Type</label>
+                    <div class="">
+                         <select placeholder="Select Gender" class="form-control" name="benefitTypeId" id="benefitTypeId"
+                            #benefitTypeId="ngModel" [(ngModel)]="AddVendorPlan.benefitTypeId">
+                            <option value="">--Select Benefit Type---</option>
+                            <option *ngFor="let benefit of Benefit" [value]="benefit.id">{{benefit.text}}</option>
+                        </select>
+
+                        <div *ngIf="benefitTypeId.invalid && (benefitTypeId.dirty || benefitTypeId.touched)"
+                            class="error">
+                            <div *ngIf="benefitTypeId.errors.required">benefitType is required</div>
+                        </div> 
                     </div>
-
                 </div>
 
-
-
-                <div class="form-group row">
-                    <label for="inputEmail1" class="label col-sm-4 col-form-label listsubheader">Vendor id
+                
+                <div class="form-group ">
+                    <label for="inputEmail1" class="label  col-form-label listsubheader">Vendor id
                     </label>
-                    <div class="col-sm-8">
+                    <div class="">
                         <select placeholder="Select Gender" class="form-control" name="vendorId" id="vendorId"
                             #vendorId="ngModel" [(ngModel)]="AddVendorPlan.vendorId">
                             <option value="">--Select Vendor---</option>
@@ -247,6 +265,70 @@
                             <div *ngIf="vendorId.errors.required">Vendor is required</div>
                         </div>
                     </div>
+                </div>
+
+                <div class="form-group">
+                    <label for="title">Policy number</label>
+                    <input type="text" class="form-control" placeholder="Enter refNumber" id="refNumber"
+                        #refNumber="ngModel" name="refNumber" [(ngModel)]=" AddVendorPlan.refNumber" required>
+
+                    <div *ngIf="refNumber.invalid && (refNumber.dirty || refNumber.touched)" class="error">
+                        <div *ngIf="refNumber.errors.required">refNumber is required</div>
+                    </div>
+
+                </div> <div class="form-group">
+                    <label for="title">Total Cost</label>
+                    <input type="text" class="form-control" placeholder="Enter totalCost" id="totalCost"
+                        #totalCost="ngModel" name="totalCost" [(ngModel)]=" AddVendorPlan.totalCost" required>
+
+                    <div *ngIf="totalCost.invalid && (totalCost.dirty || totalCost.touched)" class="error">
+                        <div *ngIf="totalCost.errors.required">totalCost is required</div>
+                    </div>
+
+                </div>
+
+                <div class="form-group">
+                    <label for="title">Company Percentage</label>
+                    <input type="text" class="form-control" placeholder="Enter Company Percentage" id="companyPercent"
+                        #companyPercent="ngModel" name="companyPercent" [(ngModel)]=" AddVendorPlan.companyPercent" required>
+
+                    <div *ngIf="companyPercent.invalid && (companyPercent.dirty || companyPercent.touched)" class="error">
+                        <div *ngIf="companyPercent.errors.required">companyPercent is required</div>
+                    </div>
+
+                </div>
+
+                <div class="form-group">
+                    <label for="title">Company Percentage cost</label>
+                    <input type="text" class="form-control" placeholder="Enter Company Percentage Cost" id="companyPercentCost"
+                        #companyPercentCost="ngModel" name="companyPercentCost" [(ngModel)]=" AddVendorPlan.companyPercentCost" required>
+
+                    <div *ngIf="companyPercentCost.invalid && (companyPercentCost.dirty || companyPercentCost.touched)" class="error">
+                        <div *ngIf="companyPercentCost.errors.required">companyPercentCost is required</div>
+                    </div>
+
+                </div>
+
+                <div class="form-group">
+                    <label for="title">Employee Percentage</label>
+                    <input type="text" class="form-control" placeholder="Enter Employee percentage" id="employeePercent"
+                        #employeePercent="ngModel" name="employeePercent" [(ngModel)]=" AddVendorPlan.employeePercent" required>
+
+                    <div *ngIf="employeePercent.invalid && (employeePercent.dirty || employeePercent.touched)" class="error">
+                        <div *ngIf="employeePercent.errors.required">Employee Percentage is required</div>
+                    </div>
+
+                </div>
+
+                <div class="form-group">
+                    <label for="title">Employee cost Percentage</label>
+                    <input type="text" class="form-control" placeholder="Enter employeePercentCost" id="employeePercentCost"
+                        #employeePercentCost="ngModel" name="employeePercentCost" [(ngModel)]=" AddVendorPlan.employeePercentCost" required>
+
+                    <div *ngIf="employeePercentCost.invalid && (employeePercentCost.dirty || employeePercentCost.touched)" class="error">
+                        <div *ngIf="employeePercentCost.errors.required">Employee cost is required</div>
+                    </div>
+
                 </div>
 
                 <div class="form-group">
@@ -266,6 +348,16 @@
                     <button *ngIf="!submitbtnPressed" nbButton status="primary" class="d-flex column"
                         [disabled]="!disable" (click)="SubmitPlan()">Submit</button>
 
+                        <div style="padding-left: 15px;">
+
+
+                          </div> <div style="padding-left: 15px;">
+                            <button nbButton outline status="primary" (click)="showPlan = false"
+                              class="d-flex column" style="background-color: white;">Discard</button>
+                          </div>
+
+
+
 
                 </div>
 
@@ -279,7 +371,9 @@
 <!-- modal for benefit create -->
 <ngx-side-modal [(show)]='showBenefit' style="width: 500px;">
     <div modal-header style="font-size: larger; font-weight: bold;">
-        <span></span>
+        <span>
+            Create New Benefit Type
+        </span>
     </div>
     <div modal-body>
 
@@ -288,9 +382,9 @@
           margin-left: 10px;">create new events</h6> -->
             <div style="margin: 20px;">
                 <div class="form-group">
-                    <label for="title">Type of Benefit</label>
+                    <label for="title" class="label col-form-label listsubheader">Type of Benefit</label>
                     <input type="text" class="form-control" placeholder="Enter name of plan" id="name" #name="ngModel"
-                        name="name" [(ngModel)]="  AddBenefit.name" required>
+                        name="name" [(ngModel)]="AddBenefit.name" required>
 
                     <div *ngIf="name.invalid && (name.dirty || name.touched)" class="error">
                         <div *ngIf="name.errors.required">name is required</div>
@@ -300,6 +394,16 @@
             </div>
 
 
+            <div class="form-group">
+                <label for="Description" style="margin-left: 0.3rem;" class="label  col-form-label listsubheader">Description</label>
+                <textarea type="textarea" class="form-control" placeholder="Enter Description" id="description"
+                    name="description" #description="ngModel" [(ngModel)]=" AddBenefit.description"></textarea>
+
+                <div *ngIf="description.invalid && (description.dirty || description.touched)" class="error">
+                    <div *ngIf="description.errors.required">Description is required</div>
+                </div>
+
+            </div>
 
 
 
@@ -314,6 +418,10 @@
         <button *ngIf="!submitbtnPressed" nbButton status="primary" class="d-flex column" [disabled]="!disabled"
           (click)="SubmitBenefitType()">Submit</button>
 
+          <div style="padding-left: 15px;">
+            <button nbButton outline status="primary" (click)="showBenefit = false"
+              class="d-flex column" style="background-color: white;">Discard</button>
+          </div>
 
       </div>
 
